--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Reto 9 Octubre 26: Curso de Backend con Node",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.3"
