--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "mongodb": "^3.3.3"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "mocha": "^6.2.2",
+    "nodemon": "^1.19.4",
+    "proxyquire": "^2.1.3",
+    "sinon": "^7.5.0",
+    "supertest": "^4.0.2"
   },
   "scripts": {
     "dev": "DEBUG=app:* nodemon src/index.js",
-    "start": "NODE_ENV=production node src/index.js"
+    "start": "NODE_ENV=production node src/index.js",
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -26,5 +31,8 @@
   "bugs": {
     "url": "https://github.com/platzi/escuelajs-reto-09/issues"
   },
-  "homepage": "https://github.com/platzi/escuelajs-reto-09#readme"
+  "homepage": "https://github.com/platzi/escuelajs-reto-09#readme",
+  "mocha": {
+    "spec": "src/test"
+  }
 }
